refactored code, implemented Grad-CAM, added .gitignore

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,4 +3,7 @@
 -Also, currently only 5 classes are classified, extend this to at least the 7 most relevant ones
 -Main gridsearch is the main file, essentially we could get rid of main.py (but not sure whether all functionalities are already implemenetd in main_gridsearch)
 -We could look at new forms to counter the class imbalance, i.e. artificially creating new data (GANs, VAEs etc.)
--s
+-extend grad-cam
+-implement Diffusion models
+
+-check if gradcam still works when using a different encoder or differnt weights (probably will not work)
